objects/SO_Reservation_Attendee__c.object
<CustomObject>
    <label>Reservation Attendee</label>
    <nameField>
        <label>Attendee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reservation Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>SO_Reservation__c</fullName>
        <label>Reservation</label>
        <referenceTo>B25__Reservation__c</referenceTo>
        <relationshipLabel>Reservation Attendees</relationshipLabel>
        <relationshipName>Reservation_Attendees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SO_Dietary_Requirements__c</fullName>
        <label>Dietary Requirements</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SO_Is_Retailer_Employee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Retailer Employee</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>